--- a/apply.html
+++ b/apply.html
@@ -66,6 +66,9 @@
       <label for="video-link">Link to Audition Video</label>
       <input type="url" id="video-link" name="video-link" required />
 
+      <label for="receipt-link">Link to payment receipt</label>
+      <input type="url" id="receipt-link" name="receipt-link" required />
+
       <button type="submit" class="btn">Submit Your Application</button>
     </form>
   </div>
